--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 	"description": "",
 	"dependencies": {
 		"express": "^4.17.1",
-		"mongoose": "^6.0.2"
+		"helmet": "^4.6.0",
+		"mongoose": "^6.0.2",
+		"morgan": "^1.10.0"
 	}
 }
